Bug 1524168 - Request AlphaVisual for WebRender r=jrmuizel

When hardware acceleration is enabled, GLContextGLX::FindVisual() is used to choose visual. When widget does not request AlphaVisual, the FindVisual() always choose RGB(24bit) visual. It causes to loose alpha during readback.

Differential Revision: https://phabricator.services.mozilla.com/D18179

--HG--
extra : moz-landing-system : lando