widget/gtk/nsWindow.cpp
@@ -3307,6 +3307,10 @@ nsresult nsWindow::Create(nsIWidget *aParent, nsNativeWidget aNativeParent,
         auto screen = gtk_widget_get_screen(mShell);
         int screenNumber = GDK_SCREEN_XNUMBER(screen);
         int visualId = 0;
+        if (useWebRender) {
+          // WebRender rquests AlphaVisual for making readback to work correctly.
+          needsAlphaVisual = true;
+        }
         if (GLContextGLX::FindVisual(display, screenNumber, useWebRender,
                                      needsAlphaVisual, &visualId)) {
           // If we're using CSD, rendering will go through mContainer, but
